--- a/_projects/2022/06June/2022-06-29-test-proj.md
+++ b/_projects/2022/06June/2022-06-29-test-proj.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "test project post"
-description: "description."
-langs: [project]
-year: "June 2022"
+description: "description"
+tags: [project]
+date: 20-06-2022
 ---
 
 
