--- a/_projects/2022/07July/2022-07-22-three.md
+++ b/_projects/2022/07July/2022-07-22-three.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "ok go project post"
+title: "three project post"
 description: "another"
 tags: [project]
-date: 30-06-2022
+date: 22-07-2022
 ---
 
 
