django getting started

--- a/_posts/2022/11Nov/2022-11-01-project1.md
+++ b/_posts/2022/11Nov/2022-11-01-project1.md
@@ -1,8 +1,19 @@
 ---
 layout: post
-title: one
-subtitle: challenge
+title: django project
+subtitle: implementing basic django
 tags: [python]
 date: 01-11-2022 
 ---
-one to two
+Project layout and file structure
+
+![](../../../assets/images/django_arch/django_begin.png)
+
+manage.py -> my_project:
+1. `__init__.py`
+2. settings.py
+3. url.py
+4. wsgi.py
+5. tests.py
+
+![](../../../assets/images/django_arch/proj_arch.png)
