django getting started v0.2

--- a/_posts/2022/11Nov/2022-11-01-project1.md
+++ b/_posts/2022/11Nov/2022-11-01-project1.md
@@ -7,6 +7,8 @@ date: 01-11-2022
 ---
 Project layout and file structure
 
+possible source: https://medium.com/@humble_bee/django-basics-for-a-beginner-5d864e6aa084
+
 ![](../../../assets/images/django_arch/django_begin.png)
 
 manage.py -> my_project:
